Import from Standard

--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,35 @@
 {
-    "name": "molajo/User",
+    "name": "molajo/user",
+    "description": "Molajo User Services for PHP Applications",
+    "version": "0.1.0",
     "type": "molajo-bundle",
-    "description": "Molajo User: Validates and Filters Input; Escapes and Formats Output",
-    "keywords": ["User", "Filter", "Validate", "Escape", "Format", "Adapters", "Interface", "PSR-0"],
+    "keywords": ["user", "commonapi", "molajo"],
     "homepage": "http://github.com/Molajo/User",
     "license": "MIT",
     "authors": [
         {
             "name": "Amy Stephen",
-            "email": "AmyStephen@gmail.com",
-            "homepage": "http://AmyStephen.github.com"
-        },
-        {
-            "name": "Other Contributors",
-            "homepage": "http://github.com/Molajo/User/contributors"
+            "email": "AmyStephen@molajo.org",
+            "homepage": "http://AmyStephen.com",
+            "role": "Developer"
         }
     ],
-    "require": {
-        "php": ">=5.3"
-    },
-
     "support": {
-        "email": "hello@molajo.org",
-        "irc": "irc://irc.freenode.org/molajo"
+        "issues": "https://github.com/Molajo/User/issues",
+        "forum": "https://groups.google.com/forum/#!forum/molajo",
+        "irc": "irc://irc.freenode.org/molajo",
+        "source": "https://github.com/Molajo/User"
     },
-    "target-dir": "Molajo/User",
+    "require": {
+        "php": ">=5.3.10",
+        "commonapi/user": "dev-master",
+        "commonapi/filehandler": "dev-master"
+    },
+    "suggest": {
+        "molajo/email": "Molajo Email Services",
+        "molajo/fieldhandler": "Molajo Fieldhandler Services"
+    },
     "autoload": {
-        "psr-0": {
-            "Molajo\\User": "./"
-        }
-    },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.1.0-dev"
-        }
+        "classmap": "./"
     }
 }
