--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "molajo/user",
     "description": "Molajo User Services for PHP Applications",
     "version": "0.1.0",
-    "type": "molajo-bundle",
+    "type": "molajo-package",
     "keywords": ["user", "commonapi", "molajo"],
     "homepage": "http://github.com/Molajo/User",
     "license": "MIT",
