--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,19 @@
     },
     "require": {
         "php": ">=5.4",
-        "commonapi/user": "dev-master",
-        "commonapi/model": "dev-master"
+        "commonapi/database": "dev-master",
+        "commonapi/model": "dev-master",
+        "commonapi/user": "dev-master"
     },
     "suggest": {
         "molajo/email": "Molajo Email Services",
-        "molajo/fieldhandler": "Molajo Fieldhandler Services"
+        "molajo/fieldhandler": "Molajo Fieldhandler Services",
+        "molajo/database": "Molajo Database Services"
     },
     "autoload": {
         "psr-4": {
-            "Molajo\\Service": "./Service/",
-            "Molajo\\User": "./Source/"
+            "Molajo\\Service\\": "Service/",
+            "Molajo\\User\\": "Source/"
         }
     }
 }
