--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Molajo\\Service\\": "Service/",
+            "Molajo\\Services\\": "Services/",
             "Molajo\\User\\": "Source/"
         }
     },
