--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Molajo\\Services\\": "Services/",
+            "Molajo\\Factories\\": "Factories/",
             "Molajo\\User\\": "Source/"
         }
     },
