--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,13 @@
     },
     "require": {
         "php": ">=5.4",
-        "commonapi/database": "dev-master",
-        "commonapi/model": "dev-master",
-        "commonapi/query": "dev-master",
+        "commonapi/email": "dev-master",
         "commonapi/user": "dev-master",
-        "ircmaxell/password-compat": "dev-master"
+        "ircmaxell/password-compat": "dev-master",
+        "molajo/query": "dev-master"
     },
     "suggest": {
-        "molajo/email": "Molajo Email Services",
-        "molajo/database": "Molajo Database Services",
-        "molajo/fieldhandler": "Molajo Fieldhandler Services",
-        "molajo/query": "Molajo Query Services"
+        "molajo/email": "dev-master"
     },
     "autoload": {
         "psr-4": {
