--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,7 +3,7 @@ filter:
 
 tools:
     # https://scrutinizer-ci.com/docs/tools/external-code-coverage/
-    external_code_coverage: true
+    external_code_coverage: false
 
     # https://scrutinizer-ci.com/docs/tools/php/php-analyzer/
     php_analyzer: true
